Added First Project to the Web Portfolio Page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
         <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500&amp;display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../src/dist/styles.css">
-        <title>Rayan Louahche | Back-end Developer</title>
+        <title>Rayan Louahche | Software Developer</title>
         <script defer="defer" src="js/main.js"></script>
         <link href="css/main.51b3af34.css" rel="stylesheet">
         </head>
