Chore: Info, Photos and Paths update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="images/porticon.png">
         <meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Welcome to my developer portfolio! Explore a collection of my projects and web applications showcasing my expertise in building dynamic and interactive user interfaces. With a passion for clean code and innovative solutions, I strive to create seamless user experiences that blend functionality with stunning designs.">
         <meta name="theme-color" content="#000000">
-        <meta name="My personal portfolio." content="Software developer portfolio">
+        <meta name="My personal portfolio." content="Software Engineer portfolio">
         <link rel="apple-touch-icon" href="images/porticon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
